hydroflow/tests/snapshots/surface_codegen__sort_by@graphvis_mermaid.snap
---
source: hydroflow/tests/surface_codegen.rs
expression: df.serde_graph().unwrap().to_mermaid()
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#02f,color:#fff,stroke:#000
classDef pushClass fill:#ff0,stroke:#000
linkStyle default stroke:#aaa,stroke-width:4px,color:red,font-size:1.5em;
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    1v1[\"(1v1) <tt>source_iter(vec!((2, 'y'), (3, 'x'), (1, 'z')))</tt>"/]:::pullClass
end
subgraph sg_2v1 ["sg_2v1 stratum 1"]
    2v1[\"(2v1) <tt>sort_by(|(k, _v)| k)</tt>"/]:::pullClass
    3v1[/"(3v1) <tt>for_each(|v| println!(&quot;{:?}&quot;, v))</tt>"\]:::pushClass
    2v1--->3v1
end
1v1--->4v1
4v1["(4v1) <tt>handoff</tt>"]:::otherClass
4v1===o2v1

